src/styles/projects.css
/* =========== 
   Layout 
   ============
*/

.projects {
    padding: 25vh 14vw 0 14vw;
}


.projects:last-of-type {
    padding-bottom: 25vh;
}


.projectContain {
    position: relative;
    width: 100%;
    min-height: 35rem;
    filter: drop-shadow(10px 10px 50px rgba(0, 0, 0, 0.5));
    cursor: pointer;
}

.projectCaption {
    position: relative;
    width: 100%;
}

.imgContain {
    position: absolute;
    border-radius: 5px;
    top: 0; bottom: 0; left: 0; right: 0;
    overflow: hidden;
}

.projectIcons {
    position: relative;
    z-index: 2;
    height: 70px;
    margin-bottom: 1rem;
}

/* =========== 
   Typography 
   ============
*/

.projectTitle, .projectSub, .titleMore, .subMore, .description {
    position: relative;
    color: #dcdde1;
    z-index: 2;
}

.projectTitle, .titleMore {
    font-family: 'Akrobat Bold';
}

.projectSub, .subMore {
    font-family: 'Akrobat Semibold';
}

.projectTitle {
    text-shadow: 0 5px 8px rgba(0, 0, 0, 0.6);
    font-size: calc(3em + 3vw);
    width: 25%;
    line-height: 1;
    margin-bottom: 1rem;
    top: 10rem;
}

.projectSub {
    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.6);
    top: 9rem;
    font-size: calc(1.5em + 1vw);
}

.projectTitle, .projectSub {
    margin-left: -6vw;
}

.titleMore {
    font-size: calc(1.5em + 2.5vw);
    padding: 2rem 3rem 0rem 3rem;
    margin-bottom: 0.3rem;
    margin-top: 5.4rem;
}

.subMore {
    margin-top: 0;
    padding: 0rem 3rem 1rem 3rem;
    margin-bottom: 0;
    font-size: calc(1em + 1vw);
}

.description {
    font-family: 'Akrobat Regular';
    font-size: calc(0.9em + 0.4vw);
    padding: 0rem 3rem 0rem 3rem;
    display: block;
}

.caption, .more {
    color: #FFF;
    opacity: 0.5;
}

.caption {
    font-family: 'Akrobat Semibold';
    font-size: 1.3em;
    float: left;
}

.more {
    font-family: 'Akrobat Bold';
    font-size: 1.5em;
    position: relative;
    float: right;
    margin: 1rem;
    transition: all 0.5s;
}

.more:hover, .more:focus {
    opacity: 1;
}

/* =========== 
   Components 
   ============
*/

.link {
    position: relative;
    font-family: 'Akrobat Bold';
    font-size: calc(0.6em + 1vw);
    background-color: #FFF;
    color: #000;
    opacity: 0.5;
    padding: 12px 25px 15px 25px;
    border-radius: 34px;
    z-index: 2;
    margin: 1rem 3rem 2rem 3rem;
    transition: all 0.5s;
}

.link:hover, .link:focus {
    opacity: 1; 
}

.embed {
    position: relative;
    fill: #FFF;
    opacity: 0.5;
    float: right;
    margin: 0.9rem 1rem 1rem 1rem;
    transition: all 0.5s;
}

.embed:hover {
    opacity: 1;
}


/* =========== 
   Assets 
   ============
*/

.img, .imgMore {
    position: absolute;
    object-fit: cover;
    width: 100%;
    height: 100%;
    transform: scale(1.1);
}

.imgMore {
    opacity: 0.4;
    box-shadow: inset 0 0 30px 15px #212121;
    filter: blur(10px);
}

.projectIcons svg, .projectIcons img {
    float: left;
    min-height: 30px;
    height: 5vw;
    max-height: 50px;
    max-width: 100px;
    display: block;
    margin: 1rem;
    transition: filter 0.2s;
}

.projectIcons svg:first-of-type {
    margin-left: 3rem;
}


.projectIcons svg:hover, .projectIcons svg:focus {
    filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.5));
}


/* =========== 
   Media Queries 
   ============
*/

@media only screen and (max-width: 900px) {
    .caption {
        display: block;
        width: 100%;
        margin-bottom: 0;
    }

    .more, .embed {
        float: left;
        display: block;
        margin-left: 0;
    }
}

@media only screen and (max-width: 600px) {
    .projects {
        padding: 25vh 5vw 10vh 5vw;
    }

    .projects:last-child {
        padding-bottom: 50vh;
    }

    .projectTitle {
        font-size: 10vw;
    }

    .projectSub {
        font-size: 6vw;
    }

    .projectTitle, .projectSub {
        margin-left: 0;
        width: 100%;
        text-align: center;
        top: 5rem;
    }

    .titleMore, .subMore, .description {
        padding-left: 4vw;
        padding-right: 4vw;
    }

    .titleMore {
        font-size: 10vw;
    }

    .caption, .description, .subMore {
        font-size: 4vw;
    }

    .more {
        font-size: 5vw;
    }
    
    .embed {
        height: 8vw;
    }

    .projectIcons svg {
        margin: 5vw;
        height: 5vw;

    }

    .projectIcons svg:first-of-type {
        margin-left: 2vw;
    }

    .link {
        margin-left: 4vw;
        font-size: 5vw;
    }
}

/* =========== 
   Animations
   ============
*/


.imgMore, .img {
    transition: all 0.3s;
}

